fix height on small monitors and prevent calculator overflow

--- a/style.css
+++ b/style.css
@@ -5,11 +5,10 @@ body{
   flex-direction: column;
   align-items: center;
   margin:0;
-  padding:0;
 }
 
 html, body{
-  height: 100%;
+  min-height: 100%;
 }
 
 h1{
@@ -36,14 +35,15 @@ h1{
   display: flex;
   align-items: flex-end;
   justify-content: flex-end;
-  float: right;
   width: 400px;
+  max-width: 1000px;
   height: 250px;
   padding-bottom: 48px;
   padding-right: 24px;
   font-size: 48px;
   color: rgb(255, 255, 255);
   font-family: 'Montserrat', sans-serif;
+  
 }
 
 .middle-line{
